Fix display on tablet of MatchPairs

--- a/src/ui/matchpairs.less
+++ b/src/ui/matchpairs.less
@@ -67,4 +67,7 @@
   .game-match-pairs__cards {
     width: (@card-max-width * 3) + ( 2 * @card-gutter );
   }
+  .game-match-pairs__cards--grid-small {
+    width: (@card-max-width * 2) + @card-gutter;
+  }
 }
